# fulltimenix

./: Cargo.toml  LICENSE  README.md  crates.nix  flake.nix
src/: friday.rs  main.rs
tests/: failure.rs  success.rs
tests/util/: mod.rs
