[package]
name = "nixpkgs-news"
version = "1.0.0"
edition = "2021"
license = "MIT"

[dev-dependencies]
assert_cmd = "2.0.14"
indoc = "2.0.5"
predicates = "3.1.0"

[dependencies]
chrono = { version = "0.4.38", features = ["serde", "std"], default-features = false }
clap = { version = "4.5.7", features = ["derive"] }
